tests/baselines/reference/project/nestedLocalModuleWithRecursiveTypecheck/amd/nestedLocalModuleWithRecursiveTypecheck.errors.txt
test1.ts(3,2): error TS1147: Import declarations in an internal module cannot reference an external module.


==== test1.ts (1 errors) ====
    module myModule {
     
     import foo = require("test2");
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1147: Import declarations in an internal module cannot reference an external module.
    
     //console.log(foo.$);
    
     var z = foo.Yo.y();
    
    }
    
    export var x = 0;
    